<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/gotoorders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#009688"
        android:padding="10dp"
        android:text="@string/summary_button"
        android:textColor="#FFFFFF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/gotoorders">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/summary_heading"
                android:textColor="#E96E2A2A"
                android:textSize="22sp"
                app:fontFamily="@font/arimo_bold" />

            <TextView
                android:id="@+id/dear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="20dp"
                android:text="@string/dear"
                android:textColor="#0921A8"
                android:textSize="20sp"
                app:fontFamily="@font/arimo_bold">

            </TextView>

            <TextView
                android:id="@+id/topping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#80EFD084"
                android:padding="10dp"
                android:text="@string/summary_toppings"
                android:textColor="#0921A8"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#80EFD084"
                android:padding="10dp"
                android:text="@string/summary_quantity"
                android:textColor="#0921A8"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/totalamount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#80EFD084"
                android:padding="10dp"
                android:text="@string/summary_price"
                android:textColor="#0921A8"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>