<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/order_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="#009688"
            android:text="@string/order"
            android:textColor="#FFFFFF">

        </Button>

        <Button
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="#009688"
            android:text="@string/summary"
            android:textColor="#FFFFFF">

        </Button>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linear"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/heading"
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/heading_order"
                android:textColor="#E96E2A2A"
                android:textSize="18sp"
                app:fontFamily="@font/arimo_bold" />


            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:hint="@string/name_hint"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.AppCompatSpinner>

                <EditText
                    android:id="@+id/number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16sp"
                    android:hint="@string/number_hint"
                    android:inputType="phone" />
            </LinearLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/toppings"
                android:textColor="#E96E2A2A"
                android:textSize="18sp"
                app:fontFamily="@font/arimo_bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/jalapeno"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/jalapeno"
                    tools:ignore="ContentDescription,NestedWeights" />

                <ImageView
                    android:id="@+id/olives"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/olives"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/pineapple"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/pineapple"
                    tools:ignore="ContentDescription">

                </ImageView>

                <ImageView
                    android:id="@+id/tomato"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/tomato"
                    tools:ignore="ContentDescription">

                </ImageView>

                <ImageView
                    android:id="@+id/pepper"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/bellpepper"
                    tools:ignore="ContentDescription">

                </ImageView>

            </LinearLayout>

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/additional_top"
                android:textColor="#E96E2A2A"
                android:textSize="18sp"
                app:fontFamily="@font/arimo_bold" />


            <CheckBox
                android:id="@+id/cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:text="@string/cheese"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <CheckBox
                android:id="@+id/chilli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:text="@string/chilli"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <CheckBox
                android:id="@+id/oregano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:text="@string/oregano"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />


            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/quantity"
                android:textColor="#E96E2A2A"
                android:textSize="18sp"
                app:fontFamily="@font/arimo_bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:onClick="decrement"
                    android:text="-"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/quantity_text_view"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/initial_quantity_value"
                    android:textColor="#000000" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="+"
                    tools:ignore="HardcodedText" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>